--- a/lab2.html
+++ b/lab2.html
@@ -80,8 +80,8 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">demo.ipynb</h5>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                            <small>Donec id elit non mi porta.</small>
+                            <p class="mb-1">The demo.ipynb file provided at the start of the lab contains some helpful methods and explanations in addition
+                              to code that imports the necessary libraries and establishes a connection between my laptop and the Artemis board. </p>
                           </a>
                         </div>
                         <br>
