--- a/lab3.html
+++ b/lab3.html
@@ -44,29 +44,29 @@
                           <div class="card-body">
                             <h4 class="card-title">Prelab</h4>
                             <p class="card-text">I2C sensor address:</p>
-                              <br><br>
+                              
                               <img src="assets/img/TOF_address.png" alt="TOF sensor address" width=70% height=auto/>
-                              <br>
+                              <br><br>
                             <p class="card-text">Since we are given 2 time of flight sensors, one will be placed on the front of the robot
                             while the other will be on the side. This configuration allows the robot to gather distance information in the 
                             x and y axes, which will help in mapping out the obstacles in an area. </p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
                           </div>
                         </div>
                         
                         <div class="card mb-3">
-                          <h3 class="card-header">Card header</h3>
+                          <h3 class="card-header">Lab</h3>
                           <div class="card-body">
-                            <h5 class="card-title">Special title treatment</h5>
-                            <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+                            <h5 class="card-title">ToF sensors and QWIIC breakout board connections:t</h5>
+                            <img src="assets/img/TOF_connection.jpg" alt="TOF connections" width=70% height=auto/>
                           </div>
-                          <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                          <svg xmlns="assets/img/TOF_connection.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                             <rect width="100%" height="100%" fill="#868e96"></rect>
                             <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
                           </svg>
                           <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">I chose to set the ToF sensors to short mode, since the range of short mode (up to 1.3m) is enough
+                              for the purposes of our robot to scan its surroundings. Sacrificing the extra range allows the sensors to be more
+                              accurate regardless of the ambient lighting. </p>
                           </div>
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item">Cras justo odio</li>
