--- a/lab3.html
+++ b/lab3.html
@@ -56,7 +56,8 @@
                                 then turned the first sensor back on, leaving two sensors able to work simultaneously with different addresses. </p> 
                                 <br>
                               
-                            <p Since we are given 2 time of flight sensors, one will be placed on the front of the robot
+                            <p class="card-text">
+                                Since we are given 2 time of flight sensors, one will be placed on the front of the robot
                                 while the other will be on the side. This configuration allows the robot to gather distance information in the 
                                 x and y axes, which will help in mapping out the obstacles in an area. </p>
                           </div>
@@ -68,19 +69,19 @@
                             <h5 class="card-title">ToF sensors and QWIIC breakout board connections:t</h5>
                             <img src="assets/img/TOF_connection.jpg" alt="TOF connections" width=70% height=auto/>
                           </div>
-                          <svg xmlns="assets/img/TOF_connection.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                            <rect width="100%" height="100%" fill="#868e96"></rect>
-                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                          </svg>
+                          
                           <div class="card-body">
                             <p class="card-text">I chose to set the ToF sensors to short mode, since the range of short mode (up to 1.3m) is enough
                               for the purposes of our robot to scan its surroundings. Sacrificing the extra range allows the sensors to be more
                               accurate regardless of the ambient lighting. </p>
                           </div>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
+                            <li class="list-group-item">2 ToF sensors working in parallel:</li>
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZLLR_Xxd574" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <li class="list-group-item">ToF sensor speed:</li>
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/Ee4Iy_cQ3P0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <li class="list-group-item">Distance vs Time:</li>
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/ryRVmpvJ-Hs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                           </ul>
                           <div class="card-body">
                             <a href="#" class="card-link">Card link</a>
