--- a/lab3.html
+++ b/lab3.html
@@ -78,18 +78,18 @@
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item">2 ToF sensors working in parallel:</li>
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/ZLLR_Xxd574" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <p class="card-text">Since I changed the address of one of the sensors during setup, there was no problem
+                              reading from two sensors in parallel.</p>
                             <li class="list-group-item">ToF sensor speed:</li>
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/Ee4Iy_cQ3P0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <p class="card-text">I got around 290ms between readings using this code:</p>
+                                <img src="assets/img/TOF_code.png" alt="TOF speed code" width=70% height=auto/>
+                                <p class="card-text">The limiting factor for the sensor speed is the ranging time. This value can be manipulated
+                              by the user, but the tradeoff for a lower ranging time is the possibility of less accurate distance data. </p>
                             <li class="list-group-item">Distance vs Time:</li>
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/ryRVmpvJ-Hs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <img src="assets/img/Distance_vs_Time.png" alt="Distance vs Time" width=70% height=auto/>
                           </ul>
-                          <div class="card-body">
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                          </div>
-                          <div class="card-footer text-muted">
-                            2 days ago
-                          </div>
                         </div>
                         
                         <br>
