--- a/lab4.html
+++ b/lab4.html
@@ -39,7 +39,24 @@
                           Lab 4: 
                           <small class="text-muted">Internal Measurement Unit</small>
                         </h3>
-                        
+                        <ul class="Parts List">
+                          <li class="list-group-item d-flex justify-content-between align-items-center">
+                            SparkFun RedBoard Artemis Nano
+                            <span class="badge bg-primary rounded-pill">1</span>
+                          </li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">
+                            9DOF IMU sensor
+                            <span class="badge bg-primary rounded-pill">1</span>
+                          </li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Force1 RC car
+                            <span class="badge bg-primary rounded-pill">1</span>
+                          </li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Li-Ion 3.7V 850mAh battery
+                            <span class="badge bg-primary rounded-pill">1</span>
+                          </li>
+                        </ul>
                         <br>
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
